updated form link

--- a/hiring.html
+++ b/hiring.html
@@ -47,7 +47,7 @@
             padding: 2rem 0;
             line-height: 1.1875;
             margin: 0;
-            letter-spacing: -3px;
+            letter-spacing: -2px;
         }
 
         .links {
@@ -214,7 +214,7 @@
                 </p>
 
                 <p>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScb9xDS5kbnTaMzb37dSjz3osBiUkCFSYlhaYkP2WEcv7_HAA/viewform">💻 MyCourses Registration</a>
+                    <a href="https://forms.gle/9HGA9Uv8pZwNsuA16">💻 MyCourses Registration</a>
                 </p>
                 <p>
                     <a title="Hiring Process" href="tutor-contact.html">📇 Contacting Tutors</a>
