added meet your tutors page

--- a/hiring.html
+++ b/hiring.html
@@ -217,6 +217,9 @@
                     <a href="https://forms.gle/yAroAxZuDtJFAgmk6">💻 MyCourses Registration</a>
                 </p>
                 <p>
+                    <a title="Meet Your Tutors!" href="tutors.html">🎓 Meet Your Tutors!</a>
+                </p>
+                <p>
                     <a title="Hiring Process" href="tutor-contact.html">📇 Contacting Tutors</a>
                 </p>
                 </div>
