--- a/tutors.html
+++ b/tutors.html
@@ -28,7 +28,7 @@
             color: rgb(34, 34, 34);
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             min-height: 100vh;
-            max-width: 28rem;
+            max-width: 40rem;
             display: flex;
             align-items: center;
             margin: auto;
@@ -36,7 +36,7 @@
         }
 
         main {
-            padding: 2rem;
+            padding: 0.4rem;
             line-height: 1.4;
         }
 
@@ -91,6 +91,37 @@
             vertical-align: bottom;
             margin: 5px;
         }
+
+        #hp  {
+            float: center; 
+            align-items: center;
+            display: flex;
+            margin: 0 0 0 15px;
+            max-width: 80%;
+            max-height: 80%;
+            height: auto;
+            width: auto;
+            padding: 0.4rem;
+        }
+
+        .liner {
+            display: flex;
+            align-items: flex-start;
+            text-align: left;
+        }
+        .liner:after {
+            content: '';
+            flex-grow: 1;
+            height: 3px;
+            background: #000000;
+            min-width: 20px;
+            margin: auto;
+        }
+        .liner:after {
+                margin-left: 15px;
+        }
+ 
+
     </style>
 </head>
 
@@ -98,28 +129,149 @@
     <main>
         <div class="img_container">
             <a href="index.html">
-                <img src="logo.png">
-                </a>
+            <img src="logo.png">
+            </a>
         </div>
-        <h1>👋 Welcome to the EPTS!</h1>
+        <h1>🎓 Meet yours tutors</h1>
 
-        <p> If you're here for the schedule, click here: <a title="Schedule" href="schedule.html"><br/>📅 Schedule</a></p>
+        <h3 class="liner"> Victor Zhou - U1 MATH / EPTS Manager</h3>
+        <p>I'm a U4 Materials Engineering Student with great interest in calculus and ODEs. I know how stressful
+            for first and second year engineering courses, such as with all different profs and different expectations,
+            it is easy to get overwhelmed. I envision that EPTS is an excellent opportunity students could rely on to
+            ease down these transition. I am really enthusiastic in tutoring and I enjoy sharing academic experience
+            to my fellow students. I am currently tutoring U1 MATH this year, so feel free to drop by in our office
+            FDA 6B whenever you have troubles on understanding the course contents or solving your Webwork for
+            MATH 262/263/264! EPTS have all the help you need!</p>
+        <img src="tutors/Victor Zhou.png" id="hp">
+        <br/>
 
-        <p>The Engineering Peer Tutoring Service is a free tutoring service for U0 and U1 engineering students,
-            sponsored by the Faculty of Engineering.</a></p>
-
-        <p>Tutorial office hours are held on a weekly basis in the McGill Engineering Student Centre
-             on the ground floor of the Frank Dawson Adams Building, Room 6B.</p>
-
-        <p>EPTS tutors can answer some of the most challenging questions
-            and help give students what they need to obtain results in their respective field of study. 
+        <h3 class="liner"> Palmyra Mendoza Carber - U1 MATH</h3>
+        <p>
+            Hello everyone, I am a U3 bioengineering student. I enjoyed the U1 Math courses and I look forward to
+helping you tackle them! Feel free to come by if you ever need help understanding the content or
+assignments for Math 262/263/264.
         </p>
+        <img src="tutors/Palmyra Mendoza Cabrer.png" id="hp">
+        <br/>
 
-        <h2>Update:</h2>
-        <p>All EPTS Tutors will now have separate MyCourses pages that will allow students to directly interact with tutors,
-            access helpful material that the tutor will post, and find all the Zoom links and announcements for the tutor's 
-            weekly office hours and exam review sessions. 
-            Please fill out the following form to register for the EPTS MyCourses pages: <a href="https://forms.gle/yAroAxZuDtJFAgmk6">EPTS MyCourses Registration</a></p></p>
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Roey Wine - U0 MATH:</h3>
+        <p>
+            I am a U4 Software Engineer ready to tackle all your Math 133, 140, and 141 problems!
+        </p>
+        <img src="tutors/Roey Wine.png" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Yuanhui Zhu - U0 MATH</h3>
+        <p>
+            Hello fellow U0 students, I’m a U4 Materials Engineering student. If you need help on U0 MATH
+courses or just want to chat feel free to pass by!
+        </p>
+        <img src="tutors/Yuanhui Zhu.png" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Lia Bowlin - U0 PHYS</h3>
+        <p>
+            Hi everyone! My name is Lia and I am a U2 in materials engineering. I really love tutoring and helping
+younger students understand difficult concepts. Come to my office hours if you need help with U0
+Physics!
+        </p>
+        <img src="tutors/Lia Bowlin.png" id="hp">
+        <br/>
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Shuyuan Zhang - BIEN</h3>
+        <p>
+            Hey there! This is Shu Yuan, a U3 Bioengineering Student with a minor in Computer Science. If you
+have any questions about BIEN 200, BIEN290 or BIEN350, or anything about life in Bioengineering,
+I&#39;ll try my best to help!
+        </p>
+        <img src="tutors/Shuyuan Zhang.png" id="hp">
+        <br/>
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Anthony Atie - CHEE</h3>
+        <p>
+            Hey everyone! My name is Anthony Atie and I am tutoring the following CHEE U1 courses this
+semester: 200 ,231, and 291. I am looking to help individuals who are struggling with content from
+classes and homework. Come by during my office hours for some free help!
+        </p>
+        <img src="tutors/Anthony Atie.png" id="hp">
+        <br/>
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Asya Bobyleva - CIVE</h3>
+        <p>
+            Hi civies❤️!
+I am a U2 civil engineering student and the tutor for the U1 CIVE courses (205, 290, 206, 207). Don't
+hesitate to come see me with any questions and it would put a big smile on my face to help!
+        </p>
+        <img src="tutors/Asya Bobyleva.png" id="hp">
+        <br/>
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Adi Orlov - COMP 208</h3>
+        <p>
+            Hi everyone, I am a U2 bioengineering student with past experience in tutoring various subjects. If you
+have any questions for any material or assignments for COMP, don’t hesitate to stop by!
+        </p>
+        <img src="tutors/Adi Orlov.png" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Rachel Tchinov - ECSE Electrical</h3>
+        <p>
+            Hi, I’m a U3 electrical engineering student, and I look forward to helping you succeed in ECSE 200,
+206, 210 and 251!
+        </p>
+        <img src="tutors/Rachel Tchinov.png" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Alexandre Saroufim - ECSE Software</h3>
+        <p>
+            Hello fellow ECSE students, do you find that you need help in ECSE 205, 222, 223 or 250? I got your
+back!
+        </p>
+        <img src="tutors/Alexandre Saroufim.png" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Jessie Kurtz - FACC 300</h3>
+        <p>
+            Hey! My name is Jessie and I am a Software Engineering student at McGill. I will be tutoring FACC
+300, or Engineering Economy, as I have an interest for Economics. Do not hesitate to come see me
+during my Office Hours if you are struggling in the course. I am here to help!😊
+        </p>
+        <img src="tutors/Jessie Kurtz.png" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Louis Kawchuk - MECH</h3>
+        <p>
+            Hey y'all! My name is Louis, and I am a U4 student in Mechanical Engineering. This is my second year
+with EPTS, and I will be tutoring MECH 210, 220, and 240. I'll be hosting office hours all year to help
+with these courses, but feel free to drop by anytime if you're struggling in other MECH classes or if you
+just wanna chat!🙂
+        </p>
+        <img src="tutors/Louis Kawchuk.png" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Kuba Stanczak - MIME</h3>
+        <p>
+            My name is Kuba and I&#39;m a U2 materials engineering student. You can come to me with any of your
+MIME problems.
+        </p>
+        <img src="tutors/Kuba Stanczak.png" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Aldo Abouchedid - PDEs</h3>
+        <p>
+            Hi everyone! I am a fifth-year Mechanical Engineering student, and I will be your PDEs tutor for this
+semester! Drop by my office hours if you have any questions in MATH 271.
+        </p>
+        <img src="tutors/Aldo Abouchedid.png" id="hp">
+        <br/>
 
 
         <div class="links">
@@ -145,8 +297,9 @@
                     <a href="https://forms.gle/yAroAxZuDtJFAgmk6">💻 MyCourses Registration</a>
                 </p>
                 <p>
-                    <a title="Meet Your Tutors!" href="tutors.html">🎓 Meet Your Tutors!</a>
+                    <a title="Meet Your Tutors!" href="tutors.html">🎓 Meet Your Tutors! (You are here!)</a>
                 </p>
+
                 <p>
                     <a title="How to contact tutors" href="tutor-contact.html">📇 Contacting Tutors</a>
                 </p>
