--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <p>All EPTS Tutors will now have separate MyCourses pages that will allow students to directly interact with tutors,
             access helpful material that the tutor will post, and find all the Zoom links and announcements for the tutor's 
             weekly office hours and exam review sessions. 
-            Please fill out the following form to register for the EPTS MyCourses pages: <a href="https://forms.gle/yAroAxZuDtJFAgmk6">EPTS MyCourses Registration</a></p></p>
+            Please fill out the following form to register for the EPTS MyCourses pages: <a href="https://forms.gle/g9mEuyW3Dx3ub62LA">EPTS MyCourses Registration</a></p></p>
 
 
         <div class="links">
@@ -142,7 +142,7 @@
                 </p>
 
                 <p>
-                    <a href="https://forms.gle/yAroAxZuDtJFAgmk6">💻 MyCourses Registration</a>
+                    <a href="https://forms.gle/g9mEuyW3Dx3ub62LA">💻 MyCourses Registration</a>
                 </p>
                 <p>
                     <a title="Meet Your Tutors!" href="tutors.html">🎓 Meet Your Tutors!</a>
