--- a/tutor-contact.html
+++ b/tutor-contact.html
@@ -185,7 +185,7 @@
                     <h2>Chemical Engineering</h2>
                 </div>
                 <div class="experience">
-                    <h3>CHEE 200, CHEE 204, CHEE 220, CHEE 231</h3>
+                    <h3>CHEE 200, CHEE 231</h3>
                     <h3><a href="mailto:epts.chee@mcgilleus.ca">epts.chee@mcgilleus.ca</a></h3>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                     <h2>Civil Engineering</h2>
                 </div>
                 <div class="experience">
-                    <h3>CIVE 205, CIVE 206, CIVE 207, CIVE 290</h3>
+                    <h3>CIVE 205, CIVE 207, CIVE 290</h3>
                     <h3><a href="mailto:epts.civil@mcgilleus.ca">epts.civil@mcgilleus.ca</a></h3>
                 </div>
             </div>
@@ -205,9 +205,9 @@
                     <h2>Electrical, Computer & Software Engineering</h2>
                 </div>
                 <div class="experience">
-                    <h3>ECSE 200, ECSE 202, ECSE 205,</h3>
-                    <h3>ECSE 210, ECSE 221, ECSE 222,</h3>
-                    <h3>ECSE 223, ECSE 251</h3>
+                    <h3>ECSE 200, ECSE 205, ECSE 206,</h3>
+                    <h3>ECSE 210, ECSE 222, ECSE 223,</h3>
+                    <h3>ECSE 250, ECSE 251</h3>
                     <h3><a href="mailto:epts.ecse@mcgilleus.ca">epts.ecse@mcgilleus.ca</a></h3>
                 </div>
             </div>
@@ -257,10 +257,10 @@
             <hr>
             <div class="details">
                 <div>
-                    <h2>U0 Physics</h2>
+                    <h2>U0 Physics + Chemistry</h2>
                 </div>
                 <div class="experience">
-                    <h3>PHYS 131, PHYS 142</h3>
+                    <h3>PHYS 131, CHEM 110</h3>
                     <h3><a href="mailto:epts.u0physics@mcgilleus.ca">epts.u0physics@mcgilleus.ca</a></h3>
                 </div>
             </div>
@@ -270,7 +270,7 @@
                     <h2>Computer Science</h2>
                 </div>
                 <div class="experience">
-                    <h3>COMP 202, COMP 208, MATLAB</h3>
+                    <h3>COMP 208</h3>
                     <h3><a href="mailto:epts.u0physics@mcgilleus.ca">epts.u0physics@mcgilleus.ca</a></h3>
                 </div>
             </div>
@@ -280,7 +280,7 @@
                     <h2>Materials Engineering</h2>
                 </div>
                 <div class="experience">
-                    <h3>MIME 209, MIME 212, MIME 250, MIME 261</h3>
+                    <h3>MIME 250, MIME 261</h3>
                     <h3><a href="mailto:epts.mime@mcgilleus.ca">epts.mime@mcgilleus.ca</a></h3>
                 </div>
             </div>
@@ -290,6 +290,7 @@
                     <h2>BioEngineering</h2>
                 </div>
                 <div class="experience">
+                    <h3>BIEN 210, 219, 350</h3>
                     <h3><a href="mailto:epts.bien@mcgilleus.ca">epts.bien@mcgilleus.ca</a></h3>
                 </div>
             </div>
