Update mathias photo

--- a/tutors.html
+++ b/tutors.html
@@ -157,18 +157,22 @@
         <h3 class="liner"> Jessie Kurtz - COMP</h3>
         <img src="tutors/Jessie Kurtz.JPG" id="hp">
         <br/>
+
         <!-- --------------------------------------------------- -->
         <h3 class="liner"> Kori Zhang - U1 Math</h3>
         <img src="tutors/Kori Zhang.JPG" id="hp">
         <br/>
+
         <!-- --------------------------------------------------- -->
         <h3 class="liner"> Lia Bowlin - MIME</h3>
         <img src="tutors/Lia Bowlin.JPG" id="hp">
         <br/>
+
         <!-- --------------------------------------------------- -->
         <h3 class="liner"> Mathias Dufresne-Piché - MECH</h3>
-        <img src="tutors/Mathias Dufresne-Piché.JPG" id="hp">
+        <img src="tutors/Mathias Dufresne-Piche.JPG" id="hp">
         <br/>
+
         <!-- --------------------------------------------------- -->
         <h3 class="liner"> Megan Boone - U0 Math</h3>
         <img src="tutors/Megan Boone.JPG" id="hp">
