--- a/tutors.html
+++ b/tutors.html
@@ -135,10 +135,17 @@
         <h1>🎓 Meet your tutors</h1>
         <img src="tutors/Group Photo.JPG" id="hp">
 
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Anne Sarah Dickman - Manager</h3>
+        <img src="tutors/Anne Sarah Dickman.JPG" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
         <h3 class="liner"> Chenyi (Alice) Xu - U0 Phys + Chem</h3>
         <img src="tutors/Chenyi Xu.JPG" id="hp">
         <br/>
 
+        <!-- --------------------------------------------------- -->
         <h3 class="liner"> Dorothy Ma - U1 Math</h3>
         <img src="tutors/Dorothy Ma.JPG" id="hp">
         <br/>
