Winter 2024 Updates and image compression

--- a/tutor-contact.html
+++ b/tutor-contact.html
@@ -185,7 +185,7 @@
                     <h2>Chemical Engineering</h2>
                 </div>
                 <div class="experience">
-                    <h3>CHEE 200, CHEE 231</h3>
+                    <h3>CHEE 204, CHEE 220</h3>
                     <h3><a href="mailto:epts.chee@mcgilleus.ca">epts.chee@mcgilleus.ca</a></h3>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                     <h2>Civil Engineering</h2>
                 </div>
                 <div class="experience">
-                    <h3>CIVE 205, CIVE 207, CIVE 290</h3>
+                    <h3>CIVE 202, CIVE 205, CIVE 206, CIVE 207</h3>
                     <h3><a href="mailto:epts.civil@mcgilleus.ca">epts.civil@mcgilleus.ca</a></h3>
                 </div>
             </div>
@@ -218,7 +218,7 @@
                     <h2>Mechanical Engineering</h2>
                 </div>
                 <div class="experience">
-                    <h3> MECH 210, MECH 220,MECH 240</h3>
+                    <h3> MECH 210, MECH 220, MECH 240</h3>
                     <h3><a href="mailto:epts.mech@mcgilleus.ca">epts.mech@mcgilleus.ca</a></h3>
                 </div>
             </div>
@@ -247,20 +247,10 @@
             <hr>
             <div class="details">
                 <div>
-                    <h2>PDE</h2>
-                </div>
-                <div class="experience">
-                    <h3>MATH 271</h3>
-                    <h3><a href="mailto:epts.pdes@mcgilleus.ca">epts.pdes@mcgilleus.ca</a></h3>
-                </div>
-            </div>
-            <hr>
-            <div class="details">
-                <div>
                     <h2>U0 Physics + Chemistry</h2>
                 </div>
                 <div class="experience">
-                    <h3>PHYS 131, CHEM 110</h3>
+                    <h3>PHYS 142, CHEM 120</h3>
                     <h3><a href="mailto:epts.u0physics@mcgilleus.ca">epts.u0physics@mcgilleus.ca</a></h3>
                 </div>
             </div>
@@ -280,7 +270,7 @@
                     <h2>Materials Engineering</h2>
                 </div>
                 <div class="experience">
-                    <h3>MIME 250, MIME 261</h3>
+                    <h3>MIME 209, MIME 212, MIME 341</h3>
                     <h3><a href="mailto:epts.mime@mcgilleus.ca">epts.mime@mcgilleus.ca</a></h3>
                 </div>
             </div>
@@ -290,8 +280,17 @@
                     <h2>BioEngineering</h2>
                 </div>
                 <div class="experience">
-                    <h3>BIEN 210, 219, 350</h3>
+                    <h3>BIEN 220, BIEN 300</h3>
                     <h3><a href="mailto:epts.bien@mcgilleus.ca">epts.bien@mcgilleus.ca</a></h3>
+                </div>
+            </div>
+            <hr>
+            <div class="details">
+                <div>
+                    <h2>Faculty</h2>
+                </div>
+                <div class="experience">
+                    <h3>FACC300</h3>
                 </div>
             </div>
             <hr>
