--- a/tutors.html
+++ b/tutors.html
@@ -136,14 +136,29 @@
         <img src="tutors/Group Photo.JPG" id="hp">
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Anne Sarah Dickman - Manager</h3>
+        <h3 class="liner"> Anne Sarah Dickman - Manager & Bioengineering</h3>
         <img src="tutors/Anne Sarah Dickman.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Chenyi (Alice) Xu - U0 Phys + Chem</h3>
+        <h3 class="liner"> Chenyi (Alice) Xu - Electrical and Computer Engineering</h3>
         <img src="tutors/Chenyi Xu.JPG" id="hp">
         <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Raphael Fontaine - Software Engineering</h3>
+        <img src="tutors/Raphael Fontaine.JPG" id="hp">
+        <br/>
+
+         <!-- --------------------------------------------------- -->
+         <h3 class="liner"> Ana Eugenia Quintero Garcia - U0 Science </h3>
+         <img src="tutors/Ana Garcia.JPG" id="hp">
+         <br/>
+
+          <!-- --------------------------------------------------- -->
+          <h3 class="liner"> Gabriel Linaje-Ferrel - FACC300 </h3>
+          <img src="tutors/Gabriel Ferrel.JPG" id="hp">
+          <br/>
 
         <!-- --------------------------------------------------- -->
         <h3 class="liner"> Dorothy Ma - U1 Math</h3>
@@ -153,16 +168,6 @@
         <!-- --------------------------------------------------- -->
         <h3 class="liner"> Emma Lyon - U0 Math</h3>
         <img src="tutors/Emma Lyon.JPG" id="hp">
-        <br/>
-
-        <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Emma Wong - BIEN</h3>
-        <img src="tutors/Emma Wong.JPG" id="hp">
-        <br/>
-
-        <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Jessie Kurtz - COMP</h3>
-        <img src="tutors/Jessie Kurtz.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
@@ -191,17 +196,7 @@
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Rachel Tchinov - ECSE Electrical and Computer</h3>
-        <img src="tutors/Rachel Tchinov.JPG" id="hp">
-        <br/>
-
-        <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Riana Dutta - ECSE Software</h3>
-        <img src="tutors/Riana Dutta.JPG" id="hp">
-        <br/>
-
-        <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Sameer Riaz - PDE</h3>
+        <h3 class="liner"> Sameer Riaz - Computer Science</h3>
         <img src="tutors/Sameer Riaz.JPG" id="hp">
         <br/>
 
