Updated mycourses link and tutors list and photos

--- a/tutors.html
+++ b/tutors.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Last modified: Fri 18 Dec 2020 -->
+<!-- Last modified: Mon 30 Sep 2024 -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -133,36 +133,56 @@
             </a>
         </div>
         <h1>🎓 Meet your tutors</h1>
-        <img src="tutors/Group Photo.JPG" id="hp">
+        <!-- <img src="tutors/Group Photo.JPG" id="hp"> -->
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Anne Sarah Dickman - Manager & Bioengineering</h3>
-        <img src="tutors/Anne Sarah Dickman.JPG" id="hp">
-        <br/>
-
-        <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Chenyi (Alice) Xu - Electrical and Computer Engineering</h3>
+        <h3 class="liner"> Chenyi Xu - Manager & Electrical and Computer Engineering</h3>
         <img src="tutors/Chenyi Xu.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Raphael Fontaine - Software Engineering</h3>
-        <img src="tutors/Raphael Fontaine.JPG" id="hp">
+        <h3 class="liner"> Osandi Pallemulla Hewage - Bioengineering</h3>
+        <img src="tutors/Osandi.JPG" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Julia Abi Aoun - Chemical Engineering</h3>
+        <img src="tutors/Julia Abi Aoun.JPG" id="hp">
         <br/>
 
          <!-- --------------------------------------------------- -->
-         <h3 class="liner"> Ana Eugenia Quintero Garcia - U0 Science </h3>
-         <img src="tutors/Ana Garcia.JPG" id="hp">
+         <h3 class="liner"> Daniel Moyseyev - Civil Engineering </h3>
+         <img src="tutors/Daniel Moyseyev.JPG" id="hp">
          <br/>
 
           <!-- --------------------------------------------------- -->
-          <h3 class="liner"> Gabriel Linaje-Ferrel - FACC300 </h3>
-          <img src="tutors/Gabriel Ferrel.JPG" id="hp">
+          <h3 class="liner"> Jessie Kurtz - Computer Science </h3>
+          <img src="tutors/Jessie Kurtz.PNG" id="hp">
           <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Dorothy Ma - U1 Math</h3>
-        <img src="tutors/Dorothy Ma.JPG" id="hp">
+        <h3 class="liner"> Daniel Buruiana - Software Engineering</h3>
+        <img src="tutors/Daniel Buruiana.JPG" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Gabriel Linaje-Ferrel - FACC300</h3>
+        <img src="tutors/Gabriel Linaje-Ferrel.JPG" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Mathias Dufresne-Piche - Mechanical Engineering</h3>
+        <img src="tutors/Mathias Dufresne-Piche.JPG" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Laura Campagnolo - MIME</h3>
+        <img src="tutors/Laura Campagnolo.JPG" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Sameer Riaz - PDE (MATH271)</h3>
+        <img src="tutors/Sameer Riaz.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
@@ -171,38 +191,23 @@
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Kori Zhang - U1 Math</h3>
-        <img src="tutors/Kori Zhang.JPG" id="hp">
-        <br/>
-
-        <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Lia Bowlin - MIME</h3>
-        <img src="tutors/Lia Bowlin.JPG" id="hp">
-        <br/>
-
-        <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Mathias Dufresne-Piché - MECH</h3>
-        <img src="tutors/Mathias Dufresne-Piche.JPG" id="hp">
-        <br/>
-
-        <!-- --------------------------------------------------- -->
         <h3 class="liner"> Megan Boone - U0 Math</h3>
         <img src="tutors/Megan Boone.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Owen Armstrong - CHEE</h3>
-        <img src="tutors/Owen Armstrong.JPG" id="hp">
+        <h3 class="liner"> Joshua Leduc - U0 Science</h3>
+        <img src="tutors/Joshua Leduc.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Sameer Riaz - Computer Science</h3>
-        <img src="tutors/Sameer Riaz.JPG" id="hp">
+        <h3 class="liner"> Dorothy Ma - U1 Math</h3>
+        <img src="tutors/Dorothy Ma.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Sophie Palermo - CIVE</h3>
-        <img src="tutors/Sophie Palermo.JPG" id="hp">
+        <h3 class="liner"> Emilia Bridgeman - U1 Math</h3>
+        <img src="tutors/Emilia Bridgeman.JPG" id="hp">
         <br/>
 
 
@@ -226,7 +231,7 @@
                 </p>
 
                 <p>
-                    <a href="https://forms.gle/yAroAxZuDtJFAgmk6">💻 MyCourses Registration</a>
+                    <a href="https://forms.gle/KFsxPJYspZ8p244cA">💻 MyCourses Registration</a>
                 </p>
                 <p>
                     <a title="Meet Your Tutors!" href="tutors.html">🎓 Meet Your Tutors! (You are here!)</a>
