--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </p>
 
                 <p>
-                    <a href="https://forms.gle/g9mEuyW3Dx3ub62LA">💻 MyCourses Registration</a>
+                    <a href="https://forms.gle/KFsxPJYspZ8p244cA">💻 MyCourses Registration</a>
                 </p>
                 <p>
                     <a title="Meet Your Tutors!" href="tutors.html">🎓 Meet Your Tutors!</a>
