--- a/schedule.html
+++ b/schedule.html
@@ -121,7 +121,7 @@
                 </p>
 
                 <p>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScb9xDS5kbnTaMzb37dSjz3osBiUkCFSYlhaYkP2WEcv7_HAA/viewform">💻 MyCourses Registration</a>
+                    <a href="https://forms.gle/KFsxPJYspZ8p244cA">💻 MyCourses Registration</a>
                 </p>
                 <p>
                     <a title="Hiring Process" href="tutor-contact.html">📇 Contacting Tutors </a>
