Remainder of W25 updates

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <h1>👋 Welcome to the EPTS!</h1>
 
-        <p> If you're here for the schedule, click here: <a title="Schedule" href="schedule.html"><br/>📅 Schedule</a></p>
+        <p>If you're here for the schedule, click here: <a title="Schedule" href="schedule.html"><br/>📅 Schedule</a></p>
 
         <p>The Engineering Peer Tutoring Service is a free tutoring service for U0 and U1 engineering students,
             sponsored by the Faculty of Engineering.</a></p>
@@ -119,7 +119,8 @@
         <p>All EPTS Tutors will now have separate MyCourses pages that will allow students to directly interact with tutors,
             access helpful material that the tutor will post, and find all the Zoom links and announcements for the tutor's 
             weekly office hours and exam review sessions. 
-            Please fill out the following form to register for the EPTS MyCourses pages: <a href="https://forms.gle/KFsxPJYspZ8p244cA">EPTS MyCourses Registration</a></p></p>
+            Please fill out the following form to register for the EPTS MyCourses pages: <a href="https://forms.gle/BNRS4UiqLbbmkzS57">EPTS MyCourses Registration</a>
+        </p>
 
 
         <div class="links">
@@ -142,7 +143,7 @@
                 </p>
 
                 <p>
-                    <a href="https://forms.gle/KFsxPJYspZ8p244cA">💻 MyCourses Registration</a>
+                    <a href="https://forms.gle/BNRS4UiqLbbmkzS57">💻 MyCourses Registration</a>
                 </p>
                 <p>
                     <a title="Meet Your Tutors!" href="tutors.html">🎓 Meet Your Tutors!</a>
