--- a/tutors.html
+++ b/tutors.html
@@ -146,8 +146,8 @@
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Julia Abi Aoun - Chemical Engineering</h3>
-        <img src="tutors/Julia Abi Aoun.JPG" id="hp">
+        <h3 class="liner"> Saiid Haymour - Chemical Engineering</h3>
+        <img src="tutors/Saiid Haymour.jpg" id="hp">
         <br/>
 
          <!-- --------------------------------------------------- -->
@@ -171,8 +171,8 @@
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Mathias Dufresne-Piche - Mechanical Engineering</h3>
-        <img src="tutors/Mathias Dufresne-Piche.JPG" id="hp">
+        <h3 class="liner"> Sameer Riaz - Mechanical Engineering</h3>
+        <img src="tutors/Sameer Riaz.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
@@ -181,9 +181,9 @@
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Sameer Riaz - PDE (MATH271)</h3>
+        <!-- <h3 class="liner"> Sameer Riaz - PDE (MATH271)</h3>
         <img src="tutors/Sameer Riaz.JPG" id="hp">
-        <br/>
+        <br/> -->
 
         <!-- --------------------------------------------------- -->
         <h3 class="liner"> Emma Lyon - U0 Math</h3>
@@ -201,8 +201,8 @@
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Dorothy Ma - U1 Math</h3>
-        <img src="tutors/Dorothy Ma.JPG" id="hp">
+        <h3 class="liner"> Zhi Ji Li - U1 Math</h3>
+        <img src="tutors/Zhi Ji Li.jpg" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
@@ -231,7 +231,7 @@
                 </p>
 
                 <p>
-                    <a href="https://forms.gle/KFsxPJYspZ8p244cA">💻 MyCourses Registration</a>
+                    <a href="https://forms.gle/BNRS4UiqLbbmkzS57">💻 MyCourses Registration</a>
                 </p>
                 <p>
                     <a title="Meet Your Tutors!" href="tutors.html">🎓 Meet Your Tutors! (You are here!)</a>
