--- a/map.html
+++ b/map.html
@@ -121,7 +121,7 @@
                 </p>
 
                 <p>
-                    <a href="https://forms.gle/KFsxPJYspZ8p244cA">💻 MyCourses Registration</a>
+                    <a href="https://forms.gle/BNRS4UiqLbbmkzS57">💻 MyCourses Registration</a>
                 </p>
                 <p>
                     <a title="Meet Your Tutors!" href="tutors.html">🎓 Meet Your Tutors!</a>
