--- a/tutors.html
+++ b/tutors.html
@@ -136,18 +136,18 @@
         <!-- <img src="tutors/Group Photo.JPG" id="hp"> -->
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Chenyi Xu - Manager & Electrical and Computer Engineering</h3>
-        <img src="tutors/Chenyi Xu.JPG" id="hp">
-        <br/>
-
-        <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Osandi Pallemulla Hewage - Bioengineering</h3>
+        <h3 class="liner"> Osandi Pallemulla Hewage - Manager & Bioengineering</h3>
         <img src="tutors/Osandi.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Raffaele Calabrese - Electrical Engineering</h3>
+        <img src="tutors/Raffaele Calabrese.JPG" id="hp">
+        <br/>
+
+        <!-- --------------------------------------------------- -->
         <h3 class="liner"> Saiid Haymour - Chemical Engineering</h3>
-        <img src="tutors/Saiid Haymour.jpg" id="hp">
+        <img src="tutors/Saiid Haymour.JPG" id="hp">
         <br/>
 
          <!-- --------------------------------------------------- -->
@@ -157,7 +157,7 @@
 
           <!-- --------------------------------------------------- -->
           <h3 class="liner"> Jessie Kurtz - Computer Science </h3>
-          <img src="tutors/Jessie Kurtz.PNG" id="hp">
+          <img src="tutors/Jessie Kurtz.JPG" id="hp">
           <br/>
 
         <!-- --------------------------------------------------- -->
@@ -171,28 +171,28 @@
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Sameer Riaz - Mechanical Engineering</h3>
-        <img src="tutors/Sameer Riaz.JPG" id="hp">
+        <h3 class="liner"> Zhi Ji Li - Mechanical Engineering</h3>
+        <img src="tutors/Zhi Ji Li.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Laura Campagnolo - MIME</h3>
-        <img src="tutors/Laura Campagnolo.JPG" id="hp">
+        <h3 class="liner"> Madeleine Embury - MIME</h3>
+        <img src="tutors/Madeleine Embury.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <!-- <h3 class="liner"> Sameer Riaz - PDE (MATH271)</h3>
-        <img src="tutors/Sameer Riaz.JPG" id="hp">
-        <br/> -->
+        <h3 class="liner"> Emilia Bridgeman - PDE (MATH271)</h3>
+        <img src="tutors/Emilia Bridgeman.JPG" id="hp">
+        <br/> 
+
+        <!-- --------------------------------------------------- -->
+        <h3 class="liner"> Maureen Awad - U0 Math</h3>
+        <img src="tutors/Maureen Awad.JPG" id="hp">
+        <br/>
 
         <!-- --------------------------------------------------- -->
         <h3 class="liner"> Emma Lyon - U0 Math</h3>
         <img src="tutors/Emma Lyon.JPG" id="hp">
-        <br/>
-
-        <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Megan Boone - U0 Math</h3>
-        <img src="tutors/Megan Boone.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
@@ -201,13 +201,13 @@
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Zhi Ji Li - U1 Math</h3>
-        <img src="tutors/Zhi Ji Li.jpg" id="hp">
+        <h3 class="liner"> Janaiya Pinder - U1 Math</h3>
+        <img src="tutors/Janaiya Pinder.jpg" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Emilia Bridgeman - U1 Math</h3>
-        <img src="tutors/Emilia Bridgeman.JPG" id="hp">
+        <h3 class="liner"> Kori Zhang - U1 Math</h3>
+        <img src="tutors/Kori Zhang.JPG" id="hp">
         <br/>
 
 
@@ -231,7 +231,7 @@
                 </p>
 
                 <p>
-                    <a href="https://forms.gle/BNRS4UiqLbbmkzS57">💻 MyCourses Registration</a>
+                    <a href="https://forms.gle/UddWKUuCGdxorUJt8">💻 MyCourses Registration</a>
                 </p>
                 <p>
                     <a title="Meet Your Tutors!" href="tutors.html">🎓 Meet Your Tutors! (You are here!)</a>
