--- a/tutors.html
+++ b/tutors.html
@@ -215,7 +215,7 @@
             <div>
                 <h2>RESOURCES</h2>
                 <p>
-                    <a title="Schedule" href="index.html">🏠 Homepage (You are here!)</a>
+                    <a title="Schedule" href="index.html">🏠 Homepage</a>
                 </p>
 
                 <p>
