Fixed the tutor image links

--- a/tutors.html
+++ b/tutors.html
@@ -147,7 +147,7 @@
 
         <!-- --------------------------------------------------- -->
         <h3 class="liner"> Saiid Haymour - Chemical Engineering</h3>
-        <img src="tutors/Saiid Haymour.JPG" id="hp">
+        <img src="tutors/Saiid Haymour.jpg" id="hp">
         <br/>
 
          <!-- --------------------------------------------------- -->
@@ -172,7 +172,7 @@
 
         <!-- --------------------------------------------------- -->
         <h3 class="liner"> Zhi Ji Li - Mechanical Engineering</h3>
-        <img src="tutors/Zhi Ji Li.JPG" id="hp">
+        <img src="tutors/Zhi Ji Li.jpg" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
