W26 updates with new schedule, mycourses link and tutor info

--- a/tutors.html
+++ b/tutors.html
@@ -171,19 +171,14 @@
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Zhi Ji Li - Mechanical Engineering</h3>
-        <img src="tutors/Zhi Ji Li.jpg" id="hp">
+        <h3 class="liner"> Fouad Al Laham - Mechanical Engineering</h3>
+        <img src="tutors/Fouad Al Laham.jpeg" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Madeleine Embury - MIME</h3>
-        <img src="tutors/Madeleine Embury.JPG" id="hp">
+        <h3 class="liner"> Laura Campagnolo - MIME</h3>
+        <img src="tutors/Laura Campagnolo.jpg" id="hp">
         <br/>
-
-        <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Emilia Bridgeman - PDE (MATH271)</h3>
-        <img src="tutors/Emilia Bridgeman.JPG" id="hp">
-        <br/> 
 
         <!-- --------------------------------------------------- -->
         <h3 class="liner"> Maureen Awad - U0 Math</h3>
@@ -201,8 +196,8 @@
         <br/>
 
         <!-- --------------------------------------------------- -->
-        <h3 class="liner"> Janaiya Pinder - U1 Math</h3>
-        <img src="tutors/Janaiya Pinder.jpg" id="hp">
+        <h3 class="liner"> Emilia Bridgeman - U1 Math</h3>
+        <img src="tutors/Emilia Bridgeman.JPG" id="hp">
         <br/>
 
         <!-- --------------------------------------------------- -->
@@ -231,7 +226,7 @@
                 </p>
 
                 <p>
-                    <a href="https://forms.gle/UddWKUuCGdxorUJt8">💻 MyCourses Registration</a>
+                    <a href="https://forms.gle/sgoxUAf52SyNRzoS7">💻 MyCourses Registration</a>
                 </p>
                 <p>
                     <a title="Meet Your Tutors!" href="tutors.html">🎓 Meet Your Tutors! (You are here!)</a>
