--- a/schedule.html
+++ b/schedule.html
@@ -121,7 +121,7 @@
                 </p>
 
                 <p>
-                    <a href="https://forms.gle/UddWKUuCGdxorUJt8">💻 MyCourses Registration</a>
+                    <a href="https://forms.gle/sgoxUAf52SyNRzoS7">💻 MyCourses Registration</a>
                 </p>
                 <p>
                     <a title="Hiring Process" href="tutor-contact.html">📇 Contacting Tutors </a>
